# CLI

./: .gitignore  LICENSE  README.md  compare_fingerprints.py  compbiolab-cli.yml  first_new_latent_example.txt  getDistance.py  new_sequence_example.txt  second_new_latent_example.txt  setup.cfg  todo.txt
CLI/: CompareLS.py  CompareLSOutput.py  CompareOutput.py  LSCompare.py  LSVector.py  LSVectors.py  README.md  SearchLS.py  SearchLSOutput.py  SearchOutput.py  SearchSQ.py  SearchSQOutput.py  __init__.py  compare.py  compare_2.py  compare_fingerprints.py  families  family_list.py  getDistance.py  get_distance.py  get_metric.py  load_files.py  new_sequence.py  output_results.py  protein.yml  search.py  search_lat.py  search_ls.py  search_seq.py  seq_lengths.csv  setup.cfg
CLI/CLI/: family_list.py
CLI/CLI/Latent_spaces/: AAEX_YAGP.txt  AAEX_YBHG.txt  ACCC_PABA.txt  ACCC_PUR3.txt  ACCC_PYRB.txt  ACCD_FOLC.txt  ACPS_FECI.txt  ACP_FABD.txt  ACP_YCED.txt  ACRE_ENVR.txt  ALSE_RSGA.txt  ALSE_RSMB.txt  ARGD_HEM4.txt  ARGR_PYRH.txt  ARSC_ARSR.txt  ARTM_YFAE.txt  ASCB_PTQB.txt  ASTC_TAM.txt  ATP6_ATPE.txt  ATP6_ATPF.txt  ATPD_ATPE.txt  ATPD_ATPG.txt  ATPD_RMLA1.txt  ATPE_ATPL.txt  ATPE_RMLA1.txt  (+220 more)
CLI/Latent_spaces/: 3MG2_OGT.txt  ACCC_BCCP.txt  ACCC_PUR5.txt  ACCC_PYRC.txt  ACPS_CHPB.txt  ACPS_ERA.txt  ACPS_PDXJ.txt  ACPS_RNC.txt  ACP_BCCP.txt  ACP_FABZ.txt  ACP_FADM.txt  ACP_HOLB.txt  ACP_KTHY.txt  ACP_PABC.txt  ACP_RNC.txt  ACP_RSUA.txt  ACP_SLYA.txt  ACP_YCEG.txt  ACRB_ACRR.txt  AGAA_AGAI.txt  AGAA_ALSK.txt  ALKH_FRLD.txt  ALSB_ALSC.txt  ALSB_FOLC.txt  ALSE_DEF.txt  AMIA_YJEE.txt  AMPE_HIS8.txt  APAG_PPIC.txt  APT_DTD.txt  APT_FRE.txt  APT_PYRF.txt  APT_SECF.txt  AQPZ_MTOX.txt  ARGB_ARGC.txt  ARGB_ARGD.txt  ARGB_ARLY.txt  ARGB_PYRB.txt  AROA_KCY.txt  AROB_AROC.txt  ASSY_ASTC.txt  (+588 more)
CLI/Trained_networks/: AAEX_YBHG.json  ACCC_BCCP.json  ACCC_PUR3.json  ACPS_ALR1.json  ACPS_CHPB.json  ACPS_ERA.json  ACPS_FECI.json  ACP_FABD.json  ACP_HOLA.json  ACP_HOLB.json  ACP_PABC.json  ACP_PLSX.json  ACP_SLYA.json  ACRB_ACRR.json  AGAA_AGAI.json  ALDB_BETA.json  ALKH_FRLD.json  ALSB_ALSC.json  ALSB_FOLC.json  ALSE_RSMB.json  AMIA_YJEE.json  AMTB_GLNK.json  APAG_PPIC.json  APT_DTD.json  APT_FRE.json  AQPZ_MTOX.json  ARGB_ARGC.json  ARGB_ARLY.json  ARGD_HEM4.json  ARGD_PYRB.json  ARGR_PYRH.json  ARLY_ASSY.json  ARSC_ARSR.json  ARSR_YFEH.json  ARTM_YFAE.json  ASSY_ASTC.json  ASSY_PYRB.json  ASTC_THIH.json  ATKA_ATKC.json  ATKA_UHPA.json  (+18 more)
CLI/utils/: __init__.py  data_loaders.py  decoding.py  io.py  layers.py  metrics.py
Latent_spaces/: ACCC_HOA.txt  ACPS_ALR1.txt  ACP_FABF.txt  ACP_HOLA.txt  ACP_PLSX.txt  ACP_YCEF.txt  ALDB_BETA.txt  ALSB_RRAA.txt  AMTB_GLNK.txt  APPB_APPC.txt  ARGB_ASSY.txt  ARGD_PYRB.txt  ARLY_ASSY.txt  AROB_AROK.txt  AROK_HOFN.txt  ARSR_WZB.txt  ARSR_YFEH.txt  ASCB_PTQA.txt  ATP6_ATPL.txt  ATPD_ATPF.txt  ATPL_MOCA.txt  BAMD_RSUA.txt  BCP_NRFF.txt  BCP_NRFG.txt  BCSQ_RSMG.txt  BCSQ_YFJY.txt  BETA_YBJK.txt  BIOC_BIOD1.txt  BIOC_BIOF.txt  BIOC_GNTX.txt  BIOD1_CSDA.txt  BISC_HCAD.txt  C56I_YCEI.txt  CBRA_MAP1.txt  CCMA_CCMD.txt  CCMB_CCMC.txt  CCMB_DSBE.txt  CCMD_NRFF.txt  CCMD_NRFG.txt  CCME_NRFF.txt  (+213 more)
Trained_networks/: ACCC_HOA.json  ACCC_PUR5.json  ACCD_FOLC.json  ACP_FABF.json  ACP_FABZ.json  ACP_KTHY.json  ACP_RNC.json  ACRE_ENVR.json  ALSE_RSGA.json  AMPE_HIS8.json  ARGB_ARGD.json  ARGB_PYRB.json  AROA_KCY.json  AROB_AROC.json  AROB_AROK.json  AROK_HOFN.json  ASCB_PTQB.json  ATP6_ATPG.json  ATPD_ATPE.json  ATPD_ATPF.json  ATPD_ATPG.json  ATPD_ATPL.json  ATPF_RMLA1.json  ATPL_MOCA.json
docs/: CompareLS.html  CompareLSOutput.html  LSVector.html  SearchLS.html  SearchLSOutput.html  SearchSQ.html  SearchSQOutput.html  compare.html  family_list.html  get_metric.html  index.html  load_files.html  output_results.html  search.html  search_lat.html  search_seq.html
docs/utils/: data_loaders.html  decoding.html  index.html  io.html  layers.html  metrics.html
(+29 files in other folders)
