[metadata]
name = compbiolab-CLI
version = 0.0.8
author = compbiolab
#author_email = author@example.com
url = https://github.com/ramindehghanpoor/CLI
license = MIT
license_file = LICENSE
description = CLI tool for CS410 project
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
project_urls =
    Bug Tracker = https://github.com/ramindehghanpoor/CLI/issues
classifiers =
	Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.8
install_requires =
	tensorflow
	scipy
	pandas
	importlib-resources>=1.1.0; python_version < '3.9'

[options.package_data]
CLI = Latent_spaces/*.txt, Trained_networks/*.json, Trained_networks/*.h5, seq_lengths.csv

[options.entry_points]
console_scripts =
    compare = CLI.compare:main
	search = CLI.search:main
