[metadata]
name = compbiolab-CLI
version = 0.3.2
author = compbiolab
#author_email = author@example.com
url = https://github.com/ramindehghanpoor/CLI
license = MIT
license_file = LICENSE
description = CLI tool for CS410 project
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
project_urls =
    Bug Tracker = https://github.com/ramindehghanpoor/CLI/issues
classifiers =
	Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.7
install_requires =
	keras==2.3.1; python_version == '3.7.6'
	numpy
	numpy==1.18.1; python_version == '3.7.6'
	scipy
	scipy==1.4.1; python_version == '3.7.6'
	pandas
	pandas==1.1.4; python_version == '3.7.6'
	tensorflow==1.15.4; python_version == '3.7.6'
	silence-tensorflow; python_version == '3.7.6'
	importlib-resources>=1.1.0; python_version < '3.9'
	tqdm
	argparse-formatter

[options.package_data]
CLI = Latent_spaces/*.txt, seq_lengths.csv

[options.entry_points]
console_scripts =
    compare = CLI.compare:main
	search = CLI.search:main
